[gd_scene load_steps=3 format=3 uid="uid://d15dr447oxpgn"]

[ext_resource type="Script" path="res://main_window/side_panel/help/help.gd" id="1_1rhmu"]
[ext_resource type="Script" path="res://custom/padded_scrollbar.gd" id="2_howdl"]

[node name="Help" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MediumSeparation"
script = ExtResource("1_1rhmu")

[node name="Heading" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Help"
horizontal_alignment = 1

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Version" type="HBoxContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBox/Version"]
layout_mode = 2
text = "Version:"

[node name="ID" type="LineEdit" parent="VBox/Version"]
layout_mode = 2
theme_type_variation = &"LineEdit_VersionNumber"
text = "alpha"
editable = false
expand_to_text_length = true
drag_and_drop_selection_enabled = false
flat = true
select_all_on_focus = true

[node name="ReportIssue" type="RichTextLabel" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[center][url]Report Issue[/url][/center]"
fit_content = true

[node name="Spacer" type="Control" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="PaddedScrollbar" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_howdl")

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"LargeSeparation"

[node name="KeyBindingsBlock1" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SmallSeparation"

[node name="KeyBindingsBlock2" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SmallSeparation"

[node name="KeyBindingsBlock3" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SmallSeparation"

[node name="KeyBindingsBlock4" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SmallSeparation"

[node name="KeyBindingsBlock5" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SmallSeparation"

[node name="Heading" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/KeyBindingsBlock5"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "While Editing A To-Do"
horizontal_alignment = 1
uppercase = true
